<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputFragment">

    <RadioGroup

        android:id="@+id/radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"

        >

        <RadioButton
            android:id="@+id/sans_serif_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/sants_serif_black"
            android:text="@string/sans_serif_black" />

        <RadioButton
            android:id="@+id/cursive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/cursive"
            android:text="@string/cursive"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/casual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/casual"
            android:text="@string/casual"
            android:textColor="#6D4C41"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="10sp"
            android:fontFamily="monospace"
            android:text="@string/monospace"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        android:text="@string/input"
        android:textColor="#300381"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="10sp"
        android:ems="10"
        android:hint="@string/Type"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55sp"
        android:layout_marginTop="360dp"
        android:layout_marginRight="55sp"
        android:onClick="buttonOk"
        android:text="@string/Ok"
        tools:ignore="UsingOnClickInXml" />

</FrameLayout>